helm/gpi-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gardenpi-api
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - api.gpi.declan.sh
      secretName: gardenpi-api-tls
  rules:
  - host: api.gpi.declan.sh
    http:
      paths:
        - path: "/"
          backend:
            serviceName: gardenpi-api
            servicePort: 80
